[workspace]
members = [
    "schemsearch-cli",
    "schemsearch-lib",
    "schemsearch_faster",
    "schemsearch-files",
    "schemsearch-sql",
    "schemsearch-java"
]

[profile.test]
inherits = "release"
lto = true

[profile.release]
lto = true

[profile.small]
inherits = "release"
lto = true
strip = true
opt-level = "z"
codegen-units = 1
