[workspace]
members = [
    "schemsearch-cli",
    "schemsearch-lib",
    "schemsearch-faster",
    "schemsearch-files",
    "schemsearch-sql",
    "schemsearch-java"
]
resolver = "2"

[profile.small]
inherits = "release"
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[profile.release]
lto = true